reviewed PR comments